modify完成sign_in swagger
